[gd_scene load_steps=3 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Instruction/Instruction.gd" type="Script" id=2]

[node name="Instruction" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -774.0
margin_bottom = -444.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 149.0

[node name="TextEdit" type="TextEdit" parent="V"]
margin_right = 236.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "error"
wrap_enabled = true

[node name="MoveButton" type="Button" parent="V"]
margin_top = 68.0
margin_right = 236.0
margin_bottom = 106.0
text = "Move"

[node name="IndexNumber" type="Label" parent="V"]
margin_top = 110.0
margin_right = 236.0
margin_bottom = 142.0
text = "3"
align = 1

[node name="ConnectionLines" type="Node2D" parent="."]
show_behind_parent = true
[connection signal="resized" from="." to="." method="_on_Instruction_resized"]
[connection signal="text_changed" from="V/TextEdit" to="." method="_on_TextEdit_text_changed"]
